[gd_scene load_steps=5 format=3 uid="uid://cnh2v106x104x"]

[ext_resource type="Texture2D" uid="uid://chjiifrnq78yj" path="res://gfx/itemset01.tres" id="1_xopgr"]
[ext_resource type="Texture2D" uid="uid://bytmv8s7ooi28" path="res://gfx/itemset01.png" id="2_0fpcd"]
[ext_resource type="Script" path="res://scripts/InventoryList.gd" id="4_3mo2t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b6v6c"]
atlas = ExtResource("2_0fpcd")
region = Rect2(96, 224, 32, 32)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 321.0
offset_top = 76.0
offset_right = 621.0
offset_bottom = 469.0
item_count = 2
item_0/text = "Old Gold Coin"
item_0/icon = ExtResource("1_xopgr")
item_1/text = "Health Potion x99"
item_1/icon = SubResource("AtlasTexture_b6v6c")
script = ExtResource("4_3mo2t")

[node name="ItemInformationBox" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 634.0
offset_top = 76.0
offset_right = 925.0
offset_bottom = 288.0
color = Color(0.101961, 0.117647, 0.545098, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ItemInformationBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ItemNameLabel" type="RichTextLabel" parent="ItemInformationBox/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]ITEM_NAME[/center]"
fit_content = true

[node name="ItemTypeLabel" type="RichTextLabel" parent="ItemInformationBox/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "ITEM_TYPE"
fit_content = true

[node name="ItemExamineLabel" type="RichTextLabel" parent="ItemInformationBox/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "ITEM_DESCRIPTION"
fit_content = true

[node name="ItemDataLabel" type="RichTextLabel" parent="ItemInformationBox/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "ITEM_CUSTOM_DATA"
fit_content = true

[node name="DummyMenu" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 81.0
offset_right = 311.0
offset_bottom = 469.0
color = Color(0.101961, 0.117647, 0.545098, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="DummyMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Label4" type="Label" parent="DummyMenu/VBoxContainer"]
layout_mode = 2
text = "(Test)"
horizontal_alignment = 1

[node name="Label" type="Label" parent="DummyMenu/VBoxContainer"]
layout_mode = 2
text = "> Inventory"

[node name="Label2" type="Label" parent="DummyMenu/VBoxContainer"]
layout_mode = 2
text = "Equipment"

[node name="Label3" type="Label" parent="DummyMenu/VBoxContainer"]
layout_mode = 2
text = "Stats"

[node name="AddButton" type="Button" parent="."]
layout_mode = 0
offset_left = 627.0
offset_top = 328.0
offset_right = 695.0
offset_bottom = 394.0
text = "++"
metadata/_edit_group_ = true

[node name="RemoveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 627.0
offset_top = 406.0
offset_right = 695.0
offset_bottom = 472.0
text = "--"
metadata/_edit_group_ = true

[node name="ItemDBButton" type="Button" parent="."]
layout_mode = 0
offset_left = 716.0
offset_top = 328.0
offset_right = 817.0
offset_bottom = 394.0
text = "ItemDB Info"
metadata/_edit_group_ = true

[node name="ItemInstanceButton" type="Button" parent="."]
layout_mode = 0
offset_left = 716.0
offset_top = 406.0
offset_right = 861.0
offset_bottom = 472.0
text = "Item InstanceInfo"
metadata/_edit_group_ = true

[node name="InventoryDataButton" type="Button" parent="."]
layout_mode = 0
offset_left = 632.0
offset_top = 486.0
offset_right = 777.0
offset_bottom = 552.0
text = "Get Inventory Data"
metadata/_edit_group_ = true

[connection signal="pressed" from="AddButton" to="InventoryList" method="_on_button_pressed"]
[connection signal="pressed" from="RemoveButton" to="InventoryList" method="_on_button_2_pressed"]
[connection signal="pressed" from="ItemDBButton" to="InventoryList" method="_on_button_3_pressed"]
[connection signal="pressed" from="ItemInstanceButton" to="InventoryList" method="_on_item_instance_button_pressed"]
[connection signal="pressed" from="InventoryDataButton" to="InventoryList" method="_on_inventory_data_button_pressed"]
